# know-it-all-bot

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  fly.toml  temp.rs
src/: adaptors.rs  bot.rs  lib.rs  main.rs  openai_client.rs  telegram_bot.rs
